2006-05-21  Jody Goldberg <jody@gnome.org>

	* gtkdoc-common.pl.in (ParseStructDeclaration) : Support
	  'long double foo' and
	  'T const * const *foo' (#341872)
	* gtkdoc-mktmpl.in (OutputDeclaration) : handle ptrs to ptrs to
	  functions 'void func (void (**ptr2ptr2func)(int a))'

2006-05-21  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (ScanSourceFile): don't check basename for '.[hc]'
	suffix since we allow other suffixes as well now. (#340199)

	* gtkdoc-mktmpl.in (OutputSignalTemplates): check if the parameter
	is actually in the source code comment block. If not, use the default
	name. Otherwise we were outputting an empty "@:" in the templates.
	(ReadTemplateFile): remove empty "@:" lines caused by above bug.

2006-04-15  Damon Chaplin  <damon@gnome.org>

	* xmldocs.make: use gtkdochelpdir rather than docdir to avoid clash
	with autoconf. (#316508)

	* tools/gtk-doc.el: Output "Returns:" rather than "Return value:",
	and a "C-x4s" binding for inserting a blank section header.

	* gtk-doc.make (sgml-build.stamp): added $(DOC_MODULE)-sections.txt
	to the dependencies, since although the templates depend on it, they
	may not be changed, but the XML should still be rebuilt.

	* gtkdoc-mkdb.in (ScanSourceFile): allow whitespace after "SECTION:".

2006-04-13  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (ReadArgsFile): When outputting a warning about a
	property, use a single colon ':', since that is what is used to
	document properties in the source code. (2 colons are used for signals)

	* gtk-doc.make (sgml-build.stamp): added $(HFILE_GLOB) here, to
	catch any new documentation in the headers.

2006-04-12  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (tagify2): strip special "-struct" suffix from
	text of links to widget structs.

2006-04-09  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	fix link after live.gnome.org wiki changes

2006-04-09  Damon Chaplin  <damon@gnome.org>

	* Released 1.6.
