@@ -114,6 +114,8 @@ gtk-doc.dsl
 gtk-doc.spec
 gtk-doc.cat
 gtkdoc-common.pl
+help/Makefile
+help/manual/Makefile
 help/manual/C/Makefile
 help/manual/C/gtk-doc-manual-C.omf
 ])
